--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,11 +1,35 @@
+# EXAMPLE USAGE:
+#
+#   Refer for explanation to following link:
+#   https://github.com/evilmartians/lefthook/blob/master/docs/configuration.md
+#
+# pre-push:
+#   commands:
+#     packages-audit:
+#       tags: frontend security
+#       run: yarn audit
+#     gems-audit:
+#       tags: backend security
+#       run: bundle audit
+#
 pre-commit:
-  piped: true
+  parallel: true
   commands:
-    frontend-eslint:
-      root: 'src/'
-      glob: '*.{ts,tsx,js,jsx}'
-      run: npx eslint {staged_files}
-    frontend-prettier:
-      root: 'src/'
-      glob: '*.{ts,tsx,js,jsx}'
-      run: npx prettier {staged_files} --check
+    eslint:
+      glob: "*.{ts,tsx}"
+      run: yarn eslint {staged_files}
+#     rubocop:
+#       tags: backend style
+#       glob: "*.rb"
+#       exclude: '(^|/)(application|routes)\.rb$'
+#       run: bundle exec rubocop --force-exclusion {all_files}
+#     govet:
+#       tags: backend style
+#       files: git ls-files -m
+#       glob: "*.go"
+#       run: go vet {files}
+#   scripts:
+#     "hello.js":
+#       runner: node
+#     "any.go":
+#       runner: go run
