--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lint-staged": "^15.2.4",
     "postcss": "^8.4.38",
     "react-error-boundary": "^4.0.13",
+    "sass": "^1.77.2",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
