--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "prepare": "npx lefthook install"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.4.2",
+    "@mui/material": "^5.15.18",
     "@tanstack/react-query": "^5.37.1",
     "@tanstack/react-query-devtools": "^5.37.1",
     "bulma": "^1.0.1",
