--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "@hookform/resolvers": "^3.4.2",
     "@tanstack/react-query": "^5.37.1",
     "@tanstack/react-query-devtools": "^5.37.1",
-    "bulma": "^1.0.1",
-    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
@@ -35,12 +33,15 @@
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.11.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "lefthook": "^1.6.12",
     "lint-staged": "^15.2.4",
     "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "react-error-boundary": "^4.0.13",
     "sass": "^1.77.2",
     "tailwindcss": "^3.4.3",
