--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "npx lefthook install"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
     "@hookform/resolvers": "^3.4.2",
     "@tanstack/react-query": "^5.37.1",
     "@tanstack/react-query-devtools": "^5.37.1",
