--- a/package.json
+++ b/package.json
@@ -15,16 +15,21 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
     "@hookform/resolvers": "^3.4.2",
+    "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.37.1",
     "@tanstack/react-query-devtools": "^5.37.1",
     "antd": "^5.17.4",
+    "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.1.3",
+    "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
