--- a/package.json
+++ b/package.json
@@ -17,15 +17,20 @@
     "@hookform/resolvers": "^3.4.2",
     "@lexical/markdown": "^0.16.0",
     "@reduxjs/toolkit": "^2.2.5",
+    "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.37.1",
     "@tanstack/react-query-devtools": "^5.37.1",
     "antd": "^5.17.4",
     "axios": "^1.7.2",
+    "draft-js": "^0.11.7",
     "lexical": "^0.16.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
@@ -35,9 +40,11 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.18",
     "@types/node": "^20.12.12",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-draft-wysiwyg": "^1.13.8",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
