--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "draft-js": "^0.11.7",
     "lexical": "^0.16.0",
     "moment": "^2.30.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
-    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@types/draft-js": "^0.11.18",
+    "@types/draftjs-to-html": "^0.8.4",
     "@types/node": "^20.12.12",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
@@ -50,6 +51,7 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.11.1",
+    "draftjs-to-html": "^0.9.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
