--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # VITE ENV
-VITE_ENDPOINT_URL=http://localhost:8000/api/
+VITE_ENDPOINT_URL=http://localhost:8000/api/v1
 VITE_REQUEST_TIMEOUT=90000
 VITE_DEBOUNCE_TIME=300
