--- a/package.json
+++ b/package.json
@@ -1,69 +1,71 @@
 {
-    "name": "fe-thesis",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "format": "prettier --check \"src/**/*.{ts,tsx}\"",
-        "format:fix": "prettier --write \"src/**/*.{ts,tsx}\"",
-        "preview": "vite preview",
-        "prepare": "npx lefthook install"
-    },
-    "dependencies": {
-        "@ant-design/icons": "^5.3.7",
-        "@hookform/resolvers": "^3.4.2",
-        "@lexical/markdown": "^0.16.0",
-        "@reduxjs/toolkit": "^2.2.5",
-        "@tailwindcss/forms": "^0.5.7",
-        "@tanstack/react-query": "^5.37.1",
-        "@tanstack/react-query-devtools": "^5.37.1",
-        "antd": "^5.17.4",
-        "axios": "^1.7.2",
-        "draft-js": "^0.11.7",
-        "lexical": "^0.16.0",
-        "moment": "^2.30.1",
-        "prop-types": "^15.8.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-draft-wysiwyg": "^1.15.0",
-        "react-hook-form": "^7.51.5",
-        "react-icons": "^5.2.1",
-        "react-redux": "^9.1.2",
-        "react-router-dom": "^6.23.1",
-        "react-toastify": "^10.0.5",
-        "redux-persist": "^6.0.0",
-        "swiper": "^11.1.3",
-        "tailwind-merge": "^2.3.0",
-        "zod": "^3.23.8"
-    },
-    "devDependencies": {
-        "@types/draft-js": "^0.11.18",
-        "@types/draftjs-to-html": "^0.8.4",
-        "@types/node": "^20.12.12",
-        "@types/react": "^18.2.66",
-        "@types/react-dom": "^18.2.22",
-        "@types/react-draft-wysiwyg": "^1.13.8",
-        "@typescript-eslint/eslint-plugin": "^7.2.0",
-        "@typescript-eslint/parser": "^7.2.0",
-        "@vitejs/plugin-react-swc": "^3.5.0",
-        "autoprefixer": "^10.4.19",
-        "draftjs-to-html": "^0.9.1",
-        "eslint": "^8.57.0",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.6",
-        "lefthook": "^1.6.12",
-        "lint-staged": "^15.2.4",
-        "postcss": "^8.4.38",
-        "prettier": "^3.2.5",
-        "prettier-plugin-tailwindcss": "^0.5.14",
-        "react-error-boundary": "^4.0.13",
-        "sass": "^1.77.2",
-        "tailwindcss": "^3.4.3",
-        "typescript": "^5.2.2",
-        "vite": "^5.2.0"
-    },
-    "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
+  "name": "fe-thesis",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier --check \"src/**/*.{ts,tsx}\"",
+    "format:fix": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "preview": "vite preview",
+    "prepare": "npx lefthook install"
+  },
+  "dependencies": {
+    "@ant-design/icons": "^5.3.7",
+    "@hookform/resolvers": "^3.4.2",
+    "@lexical/markdown": "^0.16.0",
+    "@reduxjs/toolkit": "^2.2.5",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/react-query": "^5.37.1",
+    "@tanstack/react-query-devtools": "^5.37.1",
+    "@types/d3": "^7.4.3",
+    "antd": "^5.17.4",
+    "axios": "^1.7.2",
+    "d3": "^7.9.0",
+    "draft-js": "^0.11.7",
+    "lexical": "^0.16.0",
+    "moment": "^2.30.1",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-hook-form": "^7.51.5",
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
+    "swiper": "^11.1.3",
+    "tailwind-merge": "^2.3.0",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/draft-js": "^0.11.18",
+    "@types/draftjs-to-html": "^0.8.4",
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@types/react-draft-wysiwyg": "^1.13.8",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.19",
+    "draftjs-to-html": "^0.9.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "lefthook": "^1.6.12",
+    "lint-staged": "^15.2.4",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "react-error-boundary": "^4.0.13",
+    "sass": "^1.77.2",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
+  },
+  "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
 }
